# gfxd-sys

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build_and_publish_crate.yml
gfxd-sys/: Cargo.toml  README.md  build.rs
gfxd-sys/src/: arg_type.rs  argument_callbacks.rs  config.rs  custom_output.rs  execution.rs  handlers.rs  io.rs  lib.rs  macro_id.rs  macro_info.rs  ptr.rs  settings.rs
gfxd-sys/tests/: f3dex2.rs
src/: arg_type.rs  argument_callbacks.rs  custom_output.rs  execution.rs  ffi.rs  handlers.rs  io.rs  lib.rs  macro_id.rs  macro_info.rs  ptr.rs  settings.rs
tests/: f3dex2.rs
