# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "gfxd-sys",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
repository = "https://github.com/Decompollaborate/gfxd-rs"
