# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "gfxd-sys"
edition = "2018"
version = "0.1.0"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
repository = "https://github.com/Decompollaborate/gfxd-sys"
license = "MIT"
description = "Rust bindings for libgfxd, the N64 display list decompiler library"
readme = "README.md"
keywords = [
    "disassembler",
    "n64",
    "nintendo",
    "ffi",
    "sys",
    "no_std",
    "bindings",
]
categories = [
    "parsing",
    "external-ffi-bindings",
    "no-std",
]
build = "build.rs"
links = "gfxd"

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked --force
# cargo msrv find
# ```
rust-version = "1.37.0"

[lib]
path = "src/lib.rs"

[features]
default = []
std = []

[dependencies]
# TODO: remove this dependency if we ever bump the rust-version to 1.64+
libc = { version = "=0.2.0", default-features = false }

[dev-dependencies]
pretty_assertions = "=1.0.0"

[build-dependencies]
cc = "=1.0.0"
